fix:拉黑后不再显示关注，并增加取消拉黑

--- a/src/assets/css/newCss/primary.less
+++ b/src/assets/css/newCss/primary.less
@@ -83,6 +83,9 @@
                         }
                     }
                 }
+                .u-btn-cancel-deny {
+                    .w(100%);
+                }
             }
             .u-more {
                 cursor: pointer;
