perf: update mute tag

--- a/src/assets/css/newCss/me.less
+++ b/src/assets/css/newCss/me.less
@@ -137,6 +137,11 @@
         .break(1);
         cursor: pointer;
     }
+
+    .u-mute-tag {
+        .pr;
+        top: -4px;
+    }
 }
 @media screen and (max-width: @notebook) {
     .m-author-header {
