--- a/src/assets/css/newCss/primary.less
+++ b/src/assets/css/newCss/primary.less
@@ -101,6 +101,7 @@
         .m-join-box {
             .flex;
             .grid(x, space-between);
+            align-items: center;
             padding: 10px 20px;
         }
         .u-join,
