--- a/src/assets/css/birthday.less
+++ b/src/assets/css/birthday.less
@@ -10,16 +10,16 @@ body{
 .m-birthday {
     // background: url("@{birthday}preview.png") no-repeat center top;
     // padding: 162px;
-    .mt(@header-height);
+    // .mt(@header-height);
     min-width: 1520px;
-    min-height: 839px;
+    // min-height: 839px;
     .pr;
     overflow: hidden;
 }
 .m-birthday-video{
     width: 100%;
-    height: calc(100vh + 40px);
-    
+    height: 100vh;
+
     .pr;
     .u-video{
         .size(100%);
@@ -62,16 +62,16 @@ body{
                 height: 146px;
             }
         }
-        
+
     }
 
     .u-zip {
         color: #24292e;
         font-size: 40px;
-        letter-spacing: 33px;
+        letter-spacing: 35px;
         float: left;
-        margin-left: 172px;
-        margin-top: 100px;
+        margin-left: 175px;
+        margin-top: 102px;
     }
 
     .u-cont {
