--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -1,1 +1,2 @@
-@birthday: "../img/birthday/";
+@birthday: "https://cdn.jx3box.com/design/card/birthday/default/";
+@birthday2025: "https://cdn.jx3box.com/design/card/birthday/default2025/";
