--- a/src/assets/css/birthday2025.less
+++ b/src/assets/css/birthday2025.less
@@ -14,6 +14,10 @@ body,
 .p-birthday {
     .pr;
     .clip;
+    background-color: #0a040f;
+    .u-video {
+        .full;
+    }
     .m-letter {
         .pa;
         .pointer;
@@ -82,13 +86,13 @@ body,
         // 文字
         .u-txt {
             cursor: default;
-            .rt(-388px,-160px);
+            .rt(-320px,-120px);
             .size(358px,268px);
         }
         // 星星
         .u-star {
             .size(600px);
-            .lb(-60%,-30%);
+            .lb(-56%,-30%);
         }
         // 星座
         .u-icon {
@@ -255,7 +259,7 @@ body,
     }
     100% {
         bottom: 70px;
-        transform: perspective(2000px) translate3d(30px, 20px, 70px) skewY(-16deg) rotateY(12deg) rotateX(12deg)
+        transform: perspective(2000px) translate3d(30px, 20px, 70px) skewY(-8deg) rotateY(12deg) rotateX(8deg)
             scaleX(0.8);
         left: calc(30% - 80px);
     }
