--- a/src/assets/css/birthday2025.less
+++ b/src/assets/css/birthday2025.less
@@ -40,6 +40,10 @@ body,
                 transform-origin: top;
                 animation: flipUp 0.5s ease-in-out forwards;
             }
+            .m-paper,
+            .u-img.u-girl {
+                .db;
+            }
         }
         // 点击散开
         &.diffuse {
@@ -143,6 +147,7 @@ body,
         // 信封
         .m-paper {
             .pa;
+            .none;
             .rt(40px,20px);
             .size(482px,228px);
             .u-bg {
@@ -171,6 +176,7 @@ body,
                 width: 100%;
             }
             &.u-girl {
+                .none;
                 left: 20px;
                 max-height: 400px;
             }
